Remove hardcoded version of openssl098e
Related to CVE-2014-0195, CVE-2014-0221, CVE-2014-0224, CVE-2014-3470

Change-Id: I7cbbf59847da68b4d7d7c391b3e6aa5ac2b51482

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -265,7 +265,7 @@ numpy-1.4.1-9.el6
 openssh-clients
 openssh-server
 openssl-devel
-openssl098e-0.9.8e-17.el6.centos.2
+openssl098e
 openstack-ceilometer-api
 openstack-ceilometer-alarm
 openstack-ceilometer-central
